# HPC3FINAL

./: README.md  SFN.csv  linkcuaderno.txt
LinealProject/: CMakeLists.txt  main.cpp
LinealProject/ClassExtraction/: extractiondata.cpp  extractiondata.h
LinealProject/Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake
LinealProject/Regresion/: linearregression.cpp  linearregression.h
